<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="sport">Sport</string>
    <string name="type_to_search">Type to search</string>
    <string name="news">NEWS</string>
    <string name="search">search</string>
    <string name="headlines">Headlines</string>
    <string name="sources">Sources</string>
</resources>